fixed invisible mat-toolbar on iOS

--- a/generators/app/templates/src/app/shell/_shell.component.scss
+++ b/generators/app/templates/src/app/shell/_shell.component.scss
@@ -92,6 +92,10 @@ $tabs-height: $tabs-width;
     top: 56px;
   }
 }
+
+.mat-drawer-container {
+    position: unset;
+}
 <%   } else { -%>
 .menu-button {
   margin-right: 1rem;
